--- a/src/styles/modules/_variables.scss
+++ b/src/styles/modules/_variables.scss
@@ -1,8 +1,10 @@
 $font: 'Jost';
-$font-l: 1.5rem;
-$font-m: 1.3rem;
+$font-xl: 1.5rem;
+$font-l: 1.3rem;
+$font-m: 1.2rem;
 $font-s: 1.1rem;
 $font-xs: 1rem;
+$font-xxs: 0.9rem;
 $blue-d: rgb(7, 30, 59);
 $blue: rgb(17, 73, 144);
 $blue-l: rgb(27, 116, 229);
